--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,11 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+    "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|@firebase|firebase/auth|firebase/app|firebase/firestore)"
+    ],
+    "setupFiles": ["./jest.setup.js"]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -47,6 +51,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
