--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,16 @@
     "transformIgnorePatterns": [
     "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|@firebase|firebase/auth|firebase/app|firebase/firestore)"
     ],
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": ["./jest.setup.js"],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx,js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/expo-env.d.ts",
+      "!**/.expo/**"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
